# neverdrains

./: .gitignore  .pylintrc  README.md  pyproject.toml
neverdrains/: db.sqlite3  manage.py
neverdrains/arenas/: admin.py  apps.py  models.py  urls.py  views.py
neverdrains/arenas/migrations/: 0001_initial.py
neverdrains/arenas/templates/arenas/: arena_in_bank.html
neverdrains/entries/: admin.py  exceptions.py  models.py  urls.py  views.py
neverdrains/entries/migrations/: 0001_initial.py
neverdrains/neverdrains/: asgi.py  models.py  settings.py  settings_dev.py  urls.py  wsgi.py
neverdrains/players/: admin.py  models.py  urls.py  views.py
neverdrains/players/migrations/: 0001_initial.py
neverdrains/players/templates/players/: index.html
neverdrains/tournaments/: admin.py  models.py  urls.py  views.py
neverdrains/tournaments/management/commands/: db_init.py
neverdrains/tournaments/migrations/: 0001_initial.py
neverdrains/tournaments/templates/tournaments/: detail.html  division.html  entry.html  index.html
