[tool.poetry]
name = "neverdrains"
version = "0.1.0"
description = ""
authors = ["davidjoliver86 <davidjoliver.2021@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.21.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pylint = "^2.15.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
